to/kubernetes/codeserver.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: do-codeserver
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: do-codeserver
  namespace: do-codeserver
  labels:
    app: do-codeserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: do-codeserver
  template:
    metadata:
      labels:
        app: do-codeserver
    spec:
      #nodeSelector:
      #  beta.kubernetes.io/instance-type: "c5.2xlarge"
      containers:
      - name: main
        image: "iankoulski/do-codeserver:latest"
        imagePullPolicy: Always
        #command: [""]
        #args: [""]
        ports:
        - name: pod-port
          containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: do-codeserver
  namespace: do-codeserver
  labels:
    app: do-codeserver
spec:
  ports:
  - name: svc-port
    port: 8080
    targetPort: pod-port 
  type: ClusterIP
  selector:
    app: do-codeserver
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: do-codeserver
  namespace: do-codeserver
spec:
  rules:
  - host: "do-codeserver.domain.ext"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: do-codeserver
            port:
              number: 8080
